--- a/package.yaml
+++ b/package.yaml
@@ -16,7 +16,13 @@ dependencies:
 
 ghc-options:
 - -Wall
-- -Wunused-imports
+- -Wcompat
+- -Widentities
+- -Wincomplete-record-updates
+- -Wincomplete-uni-patterns
+- -Wmissing-home-modules
+- -Wpartial-fields
+- -Wredundant-constraints
 
 default-extensions:
 - OverloadedStrings
@@ -34,6 +40,7 @@ library:
     - http-types
     - configurator
     - validation
+    - wai
 
 executables:
   user-service-exe:
@@ -59,3 +66,7 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - user-service
+    - Spock
+    - hspec
+    - hspec-wai
+    - wai
