--- a/user-service.cabal
+++ b/user-service.cabal
@@ -36,7 +36,7 @@ library
       src
   default-extensions:
       OverloadedStrings
-  ghc-options: -Wall -Wunused-imports
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       Spock
     , aeson
@@ -49,6 +49,7 @@ library
     , persistent-template
     , text
     , validation
+    , wai
   default-language: Haskell2010
 
 executable user-service-exe
@@ -59,7 +60,7 @@ executable user-service-exe
       app
   default-extensions:
       OverloadedStrings
-  ghc-options: -Wall -Wunused-imports -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Spock
     , aeson
@@ -77,8 +78,12 @@ test-suite user-service-test
       test
   default-extensions:
       OverloadedStrings
-  ghc-options: -Wall -Wunused-imports -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      Spock
+    , base >=4.7 && <5
+    , hspec
+    , hspec-wai
     , user-service
+    , wai
   default-language: Haskell2010
